--- a/provas.html
+++ b/provas.html
@@ -428,7 +428,7 @@
 		  <div class="container">
                     <tr>
                         <td><s>06/11</s></td>
-                        <td><s></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Itens 1 a 5 - Documento de Projeto: Item 6-Implementação: Protótipos de Telas">Trabalho 2</a></td>
+                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Itens 1 a 5 - Documento de Projeto: Item 6-Implementação: Protótipos de Telas">Trabalho 2</a></td>
                         <td><s>Oficina de Integração 2</s></td>
                         <td><s></s></td>
                     </tr>
@@ -437,7 +437,7 @@
                     <div class="container">
                         <tr>
                             <td><s>08/11</s></td>
-                            <td><s></s> <a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="<ul>
+                            <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="<ul>
                                                                                                                                                                             <ol>
                                                                                                                                                                             <li>Menu Fixado com âncoras para as sessões do site;</li>
                                                                                                                                                                             <li>Foto e Mini-biografia;</li>
@@ -477,7 +477,7 @@
                         <div class="container">
                             <tr>
                                 <td><!-- ><s><!-->18/11<!-- ></s><!--></td>
-                                <td><!-- ><s><!-->Trabalho<!-- ></s><!--> <a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Projeto">Detalhes</a></td>
+                                <td><!-- ><s><!--> <a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Projeto">Trabalho</a></td>
                                 <td><!-- ><s><!-->Metodologia da Pesquisa<!-- ></s><!--></td>
                                 <td><!-- ><s><!--><!-- ></s><!--></td>
                             </tr>
