Link certo para as matérias

--- a/aulas-2018-2.html
+++ b/aulas-2018-2.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 	<h1>2° Semestre 2018</h1>
-	<p><u><a href ="2018-2.html">2018.2</a></p></u>
+	<p><u><a href ="provas2018-2.html">2018.2</a></p></u>
 	<p><u><a href ="index.html">Menu principal</a></p></u>
 	<table>
 	   <tr>
