upload datas prog moveis

--- a/provas2019-1.html
+++ b/provas2019-1.html
@@ -381,6 +381,15 @@
                     
                     <div class="container">
                             <tr>
+                                <td><!-- ><s><!-->04/06<!-- ></s><!--></td>
+                                <td><!-- ><s><!--><!-- ></s><!--> <a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Entrega e apresentação do projeto final - turma 2">Apresentação trabalho 2</a></td>
+                                <td><!-- ><s><!-->Programação de Dispositivos Móveis<!-- ></s><!--></td>
+                                <td><!-- ><s><!--><!-- ></s><!--></td>
+                            </tr>
+                    </div>
+
+                    <div class="container">
+                            <tr>
                                 <td><!-- ><s><!-->27/06<!-- ></s><!--></td>
                                 <td><!-- ><s><!--><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="A Definir">Apresentação Trabalho Final</a></td>
                                 <td><!-- ><s><!-->Programação Web 1<!-- ></s><!--></td>
@@ -405,7 +414,16 @@
                                 <td><!-- ><s><!--><!-- ></s><!--></td>
                             </tr>
                     </div>
-                    
+
+                    <div class="container">
+                            <tr>
+                                <td><!-- ><s><!-->08/07<!-- ></s><!--></td>
+                                <td><!-- ><s><!--><!-- ></s><!--> <a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content=". A recuperação consistirá na entrega e defesa oral pelo aluno de uma nova versão do Projeto Final, sendo que esta nova nota substituirá a nota anterior desta tarefa.">Apresentação trabalho substitutivo</a></td>
+                                <td><!-- ><s><!-->Programação de Dispositivos Móveis<!-- ></s><!--></td>
+                                <td><!-- ><s><!--><!-- ></s><!--></td>
+                            </tr>
+                    </div>
+
                     <div class="container">
                             <tr>
                                 <td><!-- ><s><!-->10/07<!-- ></s><!--></td>
