--- a/index.html
+++ b/index.html
@@ -1,23 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Menu Inicial</title>
-    <!-- Required meta tags -->
+    <head>
+    <title>Bootstrap Card</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-      <p><u><a href ="aulas-2018-2.html">2018.2</a></p></u>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <h2>Cards Columns</h2>
+            <p>The .card-columns class creates a masonry-like grid of cards. The layout will automatically adjust as you insert more cards.</p>
+                <p><u><a href ="aulas-2018-2.html">2018.2</a></p></u>
       <p><u><a href ="aulas-2019-1.html">2019.1</a></p></u>
-  
-      
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+            <p><strong>Note:</strong> The cards are displayed vertically on small screens (less than 576px):</p>
+            <div class="card-columns">
+                <a href="">
+                    <div class="card bg-primary">
+                        <div class="card-body text-center">
+                            <p class="card-text">Some text inside the first card</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="aulas-2018-2.html">
+                    <div class="card bg-warning">
+                        <div class="card-body text-center">
+                            <p class="card-text">Some text inside the second card</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="aulas-2019-1.html">
+                    <div class="card bg-success">
+                        <div class="card-body text-center">
+                            <p class="card-text">Some text inside the third card</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="card bg-danger">
+                        <div class="card-body text-center">
+                            <p class="card-text">Some text inside the fourth card</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <p class="card-text">Some text inside the fifth card</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="card bg-info">
+                        <div class="card-body text-center">
+                            <p class="card-text">Some text inside the sixth card</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </body>
 </html>
