--- a/index.html
+++ b/index.html
@@ -11,54 +11,53 @@
     </head>
     <body>
         <div class="container">
-            <h2>Cards Columns</h2>
-            <p>The .card-columns class creates a masonry-like grid of cards. The layout will automatically adjust as you insert more cards.</p>
-                <p><u><a href ="aulas-2018-2.html">2018.2</a></p></u>
-      <p><u><a href ="aulas-2019-1.html">2019.1</a></p></u>
-            <p><strong>Note:</strong> The cards are displayed vertically on small screens (less than 576px):</p>
-            <div class="card-columns">
+            <h2>ESCOLHA UMA TEMPORADA</h2>
+                <br><br><br>
+                <!-- >
                 <a href="">
                     <div class="card bg-primary">
                         <div class="card-body text-center">
                             <p class="card-text">Some text inside the first card</p>
                         </div>
                     </div>
-                </a>
+                </a><!-->
                 <a href="aulas-2018-2.html">
                     <div class="card bg-warning">
                         <div class="card-body text-center">
-                            <p class="card-text">Some text inside the second card</p>
+                            <p class="card-text">2018-2</p>
                         </div>
                     </div>
                 </a>
                 <a href="aulas-2019-1.html">
                     <div class="card bg-success">
                         <div class="card-body text-center">
-                            <p class="card-text">Some text inside the third card</p>
+                            <p class="card-text">2019-1</p>
                         </div>
                     </div>
-                </a>
-                <a href="">
+                </a><!-- >
+                <a href="aulas-2019-2.html">
                     <div class="card bg-danger">
                         <div class="card-body text-center">
                             <p class="card-text">Some text inside the fourth card</p>
                         </div>
                     </div>
-                </a>
+                </a><!-->
+                <!-- >
                 <a href="">
                     <div class="card bg-light">
                         <div class="card-body text-center">
                             <p class="card-text">Some text inside the fifth card</p>
                         </div>
                     </div>
-                </a>
+                </a> <!-->
+                <!-- >
                 <a href="">
                     <div class="card bg-info">
                         <div class="card-body text-center">
                             <p class="card-text">Some text inside the sixth card</p>
                         </div>
                     </div>
-                </a>
+                </a><!-->
             </div>
         </div>
     </body>
