--- a/provas2019-1.html
+++ b/provas2019-1.html
@@ -143,7 +143,7 @@
                </tr>
                <tr>
                 <td>SO36C</td>
-                <td><button type="button" class="btn btn-light" onclick="TeoriaComp()">Teoria Da Computação</button></td>
+                <td><button type="button" class="btn btn-warning" onclick="TeoriaComp()">Teoria Da Computação</button></td>
                 <td>ES61</td>
                 <td>4</td>
                </tr>
