bug fix data content web

--- a/provas2019-1.html
+++ b/provas2019-1.html
@@ -463,15 +463,14 @@
                         <div class="container">
                                 <tr>
                                     <td><!-- ><s><!-->27/06<!-- ></s><!--></td>
-                                    <td><!-- ><s><!--><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Apresentação Trabalho Final">O trabalho a ser desenvolvido será dividido em 2 etapas.</br>
-																							   Criação do Sistema de Back-End;/<br>
-																							   Criação da Integração do Back-End com o Front-End;</br>
-																							   O sistema deverá fornecer os dados necessários para a população dinâmica do trabalho T02 - Criação do Seu Portfólio.</br>
-					    																		   Com o sistema pronto, deve-se integrar o que foi feito no T2 com o que ficou pronto no T3.</br>
-																							   Lembrando que o trabalho 3 tem como dependência o trabalho 2.</br>
-																							   A INTEGRAÇÃO DO FRONT-END EM REACTJS COM O BACK-END EM NODE SERÁ TAMBÉM AVALIADA</br>
-																							   Para isso, deve-se utilizar alguma técnica de Ajax (fetch, axios) junto com o ReactJS para alterar os estados dos componentes e obter os dados diretamente do Back-End.<br>.<br>
-																							   </a></td>
+                                    <td><!-- ><s><!--><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="O trabalho a ser desenvolvido será dividido em 2 etapas.</br>
+																                              Criação do Sistema de Back-End;/<br>
+																                              Criação da Integração do Back-End com o Front-End;</br>
+																                              O sistema deverá fornecer os dados necessários para a população dinâmica do trabalho T02 - Criação do Seu Portfólio.</br>
+					    											                              Com o sistema pronto, deve-se integrar o que foi feito no T2 com o que ficou pronto no T3.</br>
+																                              Lembrando que o trabalho 3 tem como dependência o trabalho 2.</br>
+																                              A INTEGRAÇÃO DO FRONT-END EM REACTJS COM O BACK-END EM NODE SERÁ TAMBÉM AVALIADA</br>
+																                              Para isso, deve-se utilizar alguma técnica de Ajax (fetch, axios) junto com o ReactJS para alterar os estados dos componentes e obter os dados diretamente do Back-End;">Trabalho Final</a></td>
                                     <td><!-- ><s><!-->Programação Web 1<!-- ></s><!--></td>
                                     <td><!-- ><s><!--><!-- ></s><!--></td>
                                 </tr>
@@ -480,53 +479,53 @@
 			<div class="container">
                                 <tr>
                                     <td><!-- ><s><!-->28/06<!-- ></s><!--></td>
-                                    <td><!-- ><s><!--><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Apresentação trabalho final">Apresentação Trabalho Final
-					    																		  Utilizando NodeJS, você deverá criar um sistema que consiga realizar o CRUD das seguintes funcionalidades:</br>
-																							  <ul>Mini-biografia;
-																							  <li>Texto com sua mini-biografia.</li>
-																							  </ul>
-																							  <ul>Foto;
-																							  <li>Fazer o upload de uma foto do seu computador;</li>
-																							  <li>Disponibilizar para o front-end a URL da foto;</li>
-																							  </ul>
-																							  <ul>Currículo;
-																							  <li>Fazer o upload de um arquivo PDF do seu computador;</li>
-																							  <li>Disponibilizar para o front-end a URL do currículo;</li>
-																							  </ul>
-																							  <ul>Interesses;
-																							  <li>Lista dos seus interesses;</li>
-																							  </ul>
-																							  <ul>Idiomas;
-																							  <li>Lista dos seus idiomas;</li>
-																							  </ul>
-																							  <ul>Formação;
-																							  <li>Lista das instituições que você já passou;</li>
-																							  </ul>
-																							  <ul>Atividades desenvolvidas;
-																							  <li>Lista das atividades que você já desenvolveu;</li>
-																							  </ul>
-																							  <ul>Lista de suas principais habilidades;
-																							  <li>Lista das suas principais habilidades;</li>
-																							  </ul>
-																							  <ul>Portfólio com alguns projetos que já executou (se não existir, usar os trabalhos da disciplina)
-																							  <li>Nome do projeto;</li>
-																							  <li>Data do projeto;</li>
-																							  <li>Descrição do projeto;
-																							  </ul>
-																							  <ul>Mais informações
-																							  <li>Texto com mais informações;</li>
-																							  </ul>
-																							  <ul>Biografia completa;
-																							  <li>Texto com a sua biografia completa;</li>
-																							  </ul>
-																							  <ul>Links
-																							  <li>Link para o seu GitHub;</li>
-																							  <li>Links para as redes Sociais: Facebook, Twitter, Instagram, etc...</li>
-																							  </ul>
-																							  Para cada uma dessas funcionalidades, deve-se criar um sistema que consiga: Buscar, Inserir, Excluir e Atualizar estes dados. </br>
-																							  Não é necessário nenhum sistema de login.</br>
-																							  Além dos CRUDS, deve-se criar endpoints que consigam acessar publicamente todos estes dados cadastrados, por exemplo, ao acessar:</br>
-																							  <a>http://localhost:8080/t3/projetos</a></a></td>
+                                    <td><!-- ><s><!--><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Apresentação Trabalho Final
+					    												                       Utilizando NodeJS, você deverá criar um sistema que consiga realizar o CRUD das seguintes funcionalidades:</br>
+																	                       <ul>Mini-biografia;
+																	                       <li>Texto com sua mini-biografia.</li>
+																	                       </ul>
+																	                       <ul>Foto;
+																	                       <li>Fazer o upload de uma foto do seu computador;</li>
+																	                       <li>Disponibilizar para o front-end a URL da foto;</li>
+																	                       </ul>
+																	                       <ul>Currículo;
+																	                       <li>Fazer o upload de um arquivo PDF do seu computador;</li>
+																	                       <li>Disponibilizar para o front-end a URL do currículo;</li>
+																	                       </ul>
+																	                       <ul>Interesses;
+																	                       <li>Lista dos seus interesses;</li>
+																	                       </ul>
+																	                       <ul>Idiomas;
+																	                       <li>Lista dos seus idiomas;</li>
+																	                       </ul>
+																	                       <ul>Formação;
+																	                       <li>Lista das instituições que você já passou;</li>
+																	                       </ul>
+																	                       <ul>Atividades desenvolvidas;
+																	                       <li>Lista das atividades que você já desenvolveu;</li>
+																	                       </ul>
+																	                       <ul>Lista de suas principais habilidades;
+																	                       <li>Lista das suas principais habilidades;</li>
+																	                       </ul>
+																	                       <ul>Portfólio com alguns projetos que já executou (se não existir, usar os trabalhos da disciplina)
+																	                       <li>Nome do projeto;</li>
+																	                       <li>Data do projeto;</li>
+																	                       <li>Descrição do projeto;
+																	                       </ul>
+																	                       <ul>Mais informações
+																	                       <li>Texto com mais informações;</li>
+																	                       </ul>
+																	                       <ul>Biografia completa;
+																	                       <li>Texto com a sua biografia completa;</li>
+																	                       </ul>
+																	                       <ul>Links
+																	                       <li>Link para o seu GitHub;</li>
+																	                       <li>Links para as redes Sociais: Facebook, Twitter, Instagram, etc...</li>
+																	                       </ul>
+																	                       Para cada uma dessas funcionalidades, deve-se criar um sistema que consiga: Buscar, Inserir, Excluir e Atualizar estes dados. </br>
+																	                       Não é necessário nenhum sistema de login.</br>
+																	                       Além dos CRUDS, deve-se criar endpoints que consigam acessar publicamente todos estes dados cadastrados, por exemplo, ao acessar:</br>
+																	                       <a>http://localhost:8080/t3/projetos</a>">Apresentação Trabalho Final</a></td>
                                     <td><!-- ><s><!-->Programação Web 1<!-- ></s><!--></td>
                                     <td><!-- ><s><!--><!-- ></s><!--></td>
                                 </tr>
@@ -536,11 +535,11 @@
 			<div class="container">
                                 <tr>
                                     <td><!-- ><s><!-->04/07<!-- ></s><!--></td>
-                                    <td><!-- ><s><!--><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Apresentação trabalho final">Apresentação Trabalho Final
-					    																		  Com o sistema pronto, deve-se integrar o que foi feito no T2 com o que ficou pronto no T3.</br>
-					    																		  Lembrando que o trabalho 3 tem como dependência o trabalho 2.</br>
-					    																		  A INTEGRAÇÃO DO FRONT-END EM REACTJS COM O BACK-END EM NODE SERÁ TAMBÉM AVALIADA</br>
-					    																		  Para isso, deve-se utilizar alguma técnica de Ajax (fetch, axios) junto com o ReactJS para alterar os estados dos componentes e obter os dados diretamente do Back-End.</br></a></td>
+                                    <td><!-- ><s><!--><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content=">Apresentação Trabalho Final
+					    									                                                Com o sistema pronto, deve-se integrar o que foi feito no T2 com o que ficou pronto no T3.</br>
+					    									                                                Lembrando que o trabalho 3 tem como dependência o trabalho 2.</br>
+					    									                                                A INTEGRAÇÃO DO FRONT-END EM REACTJS COM O BACK-END EM NODE SERÁ TAMBÉM AVALIADA</br>
+					    									                                                Para isso, deve-se utilizar alguma técnica de Ajax (fetch, axios) junto com o ReactJS para alterar os estados dos componentes e obter os dados diretamente do Back-End.">Apresentação trabalho final</a></td>
                                     <td><!-- ><s><!-->Programação Web 1<!-- ></s><!--></td>
                                     <td><!-- ><s><!--><!-- ></s><!--></td>
                                 </tr>
