atualização do projeto de web

--- a/provas2019-1.html
+++ b/provas2019-1.html
@@ -384,34 +384,34 @@
                     
                     <div class="container">
                             <tr>
-                                <td><!-- ><s><!-->04/06<!-- ></s><!--></td>
-                                <td><!-- ><s><!--><!-- ></s><!--> <a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Entrega e apresentação do projeto final - turma 2">Apresentação trabalho 2</a></td>
-                                <td><!-- ><s><!-->Programação de Dispositivos Móveis<!-- ></s><!--></td>
-                                <td><!-- ><s><!--><!-- ></s><!--></td>
+                                <td><s><04/06</s></td>
+                                <td><s></s> <a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Entrega e apresentação do projeto final - turma 2">Apresentação trabalho 2</a></td>
+                                <td><s>Programação de Dispositivos Móveis</s></td>
+                                <td><s>9,5</s></td>
                             </tr>
                     </div>
 
 		    <div class="container">
                             <tr>
-                                <td></s>06/06</s></td>
-                                <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Segunda Prova">Prova P2</a></td>
-                                <td></s>Programação Distribuida</s></td>
-                                <td></s></s></td>
+                                <td><s>06/06</s></td>
+                                <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Segunda Prova">Prova P2</a></td>
+                                <td><s>Programação Distribuida</s></td>
+                                <td><s></s></td>
                             </tr>
                     </div>
                     
                     <div class="container">
                             <tr>
-                                <td></s>07/06</s></td>
-                                <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Entrega de 3 cópias impressas da proposta de projeto Professores orientadores">Professores orientadores</a></td>
-                                <td></s>Trabalho de Conclusão de Curso 1</s></td>
-                                <td></s></s></td>
+                                <td><s>07/06</s></td>
+                                <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Entrega de 3 cópias impressas da proposta de projeto Professores orientadores">Professores orientadores</a></td>
+                                <td><s>Trabalho de Conclusão de Curso 1</s></td>
+                                <td><s></s></td>
                             </tr>
                     </div>
 
 		     <div class="container">
                         <tr>
-                            <td></s>14/06</s></td>
+                            <td></s>21/06</s></td>
                             <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="<ul>
                                                                                                                                                                             <ol>
                                                                                                                                                                             <li>Menu Fixado com âncoras para as sessões do site;</li>
