--- a/provas2019-1.html
+++ b/provas2019-1.html
@@ -394,7 +394,7 @@
 		    <div class="container">
                             <tr>
                                 <td><s>06/06</s></td>
-                                <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Segunda Prova">Prova P2</a></td>
+                                <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Segunda Prova">Prova P2</a><s></td>
                                 <td><s>Programação Distribuida</s></td>
                                 <td><s></s></td>
                             </tr>
@@ -403,7 +403,7 @@
                     <div class="container">
                             <tr>
                                 <td><s>07/06</s></td>
-                                <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Entrega de 3 cópias impressas da proposta de projeto Professores orientadores">Professores orientadores</a></td>
+                                <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Entrega de 3 cópias impressas da proposta de projeto Professores orientadores">Professores orientadores</a><s></td>
                                 <td><s>Trabalho de Conclusão de Curso 1</s></td>
                                 <td><s></s></td>
                             </tr>
