--- a/provas2019-1.html
+++ b/provas2019-1.html
@@ -384,8 +384,8 @@
                     
                     <div class="container">
                             <tr>
-                                <td><s><04/06</s></td>
-                                <td><s></s> <a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Entrega e apresentação do projeto final - turma 2">Apresentação trabalho 2</a></td>
+                                <td><s>04/06</s></td>
+                                <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Entrega e apresentação do projeto final - turma 2">Apresentação trabalho 2</a><s></td>
                                 <td><s>Programação de Dispositivos Móveis</s></td>
                                 <td><s>9,5</s></td>
                             </tr>
