--- a/aulas-2019-1.html
+++ b/aulas-2019-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Horarios 2ºsem</title>
+		<title>Horarios 1ºsem</title>
 		<meta charset ="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -11,10 +11,10 @@
 		<link rel="stylesheet" href="/css/style.css">
 	</head>
 	<body>
-	<h1>2° Semestre 2019</h1>
+	<h1>1° Semestre 2019</h1>
 		
        <p><u><a href ="index.html">Menu Principal</a></p></u>
-       <p><u><a href ="provas2019-2.html">PROVAS</a></p></u>
+       <p><u><a href ="provas2019-1.html">PROVAS</a></p></u>
     
 	<table>
 	   <tr>
@@ -24,28 +24,29 @@
 		<th>CHS</th> 
 	   </tr>
 	   <tr>
-		<td>SO33A</td>
+		<td>EC33D</td>
 		<td>Estrutura de Dados</td>
-		<td>SPO1</td>
-		<td>5</td>
-	   </tr>
-	   <tr>
-		<td>IF68X</td>
-		<td>Desenvolvimento De Jogos</td>
-		<td>C91</td>
+		<td>C31</td>
 		<td>4</td>
-	   </tr>	
+	   </tr>
 	   <tr>
-		<td>IF66J</td>
-		<td>Teste De Software</td>
-		<td>ES51</td>
+		<td>AS36A</td>
+		<td>Programação Distribuída</td>
+		<td>N16</td>
+		<td>4</td>
+	   </tr>
+		
+	   <tr>
+		<td>IF66H</td>
+		<td>Programação Web 1</td>
+		<td>ES61</td>
 		<td>5</td>
 	   </tr>
 	   <tr>
-		<td>IF67I</td>
-		<td>Programação Web 2</td>
+		<td>IF67H</td>
+		<td>Programação Para Dispositivos Moveis</td>
 		<td>ES71</td>
-		<td>5</td>
+		<td>2</td>
 	   </tr>
 	   <tr>
 		<td>IF67L</td>
@@ -56,14 +57,14 @@
 	   <tr>
 		<td>SO36C</td>
 		<td>Teoria Da Computação</td>
-		<td>SPO1</td>
+		<td>ES61</td>
 		<td>4</td>
 	   </tr>
 	   <tr>
 		<td>Total de disciplinas: 6</td>
 	   </tr>
 	   <tr>
-		<td>Carga horária semanal utilizada: 25</td>
+		<td>Carga horária semanal utilizada: 24</td>
 	   </tr>
 	   <tr>
 		<td>Carga horária semanal máxima permitida: 40</td>
@@ -86,38 +87,38 @@
    <tr>
     <td>18:40</td>
     <td>19:00</td>
-    <td>Desenvolvimento De Jogos C91/K009</td>
-    <td>Programação Web 2 ES71/K009</td>
-    <td>Desenvolvimento De Jogos C91/P005</td>
+    <td>Programação Móveis IF67H/I201</td>
     <td>-------</td>
-    <td>Teste De Software ES51/P001</td>
+    <td>-------</td>
+    <td>-------</td>
+    <td>Programação Web 1 ES61/P105</td>
    </tr>
    <tr>
     <td>19:00</td>
     <td>19:30</td>
-    <td>Desenvolvimento De Jogos C91/K009</td>
-    <td>Programação Web 2 ES71/K009</td>
-    <td>Desenvolvimento De Jogos C91/P005</td>
+    <td>Programação Móveis IF67H/I201</td>
     <td>-------</td>
-    <td>Teste De Software ES51/P001</td>
+    <td>Teoria Da Computação ES61/P101</td>
+    <td>Programação Distribuída N16/K009</td>
+    <td>Programação Web 1 ES61/P105</td>
    </tr>
    <tr>
     <td>19:30</td>
     <td>20:20</td>
-    <td>Desenvolvimento De Jogos C91/K009</td>
-    <td>Programação Web 2 ES71/K009</td>
-    <td>Desenvolvimento De Jogos C91/P005</td>
+    <td>Programação Móveis IF67H/I201</td>
     <td>-------</td>
-    <td>Teste De Software ES51/P001</td>
+    <td>Teoria Da Computação ES61/P101</td>
+    <td>Programação Distribuída N16/K009</td>
+    <td>Programação Web 1 ES61/P105</td>
    </tr>
    <tr>
     <td>20:20</td>
     <td>21:10</td>
-    <td>Desenvolvimento De Jogos C91/K009</td>
-    <td>Programação Web 2 ES71/K009</td>
-    <td>Desenvolvimento De Jogos C91/P005</td>
+    <td>Programação Móveis IF67H/I201</td>
     <td>-------</td>
-    <td>Teste De Software ES51/P001</td>
+    <td>Teoria Da Computação ES61/P101</td>
+    <td>Programação Distribuída N16/K009</td>
+    <td>Programação Web 1 ES61/P105</td>
    </tr>
    <tr>
     <td>21:10</td>
@@ -132,19 +133,19 @@
     <td>21:20</td>
     <td>22:10</td>
     <td>TCC 1 IF67L/I202</td>
-    <td>Teste De Software ES51/P001</td>
-    <td>-------</td>
-    <td>Programação Web 2 ES71/K009</td>
-    <td>-------</td>
+    <td>Programação Móveis IF67H/I201</td>
+    <td>Programação Distribuída N16/K009</td>
+    <td>Programação Web 1 ES61/A040</td>
+    <td>Teoria Da Computação ES61/P101</td>
    </tr>
    <tr>
     <td>22:10</td>
     <td>23:00</td>
     <td>TCC 1 IF67L/I202</td>
-    <td>Teste De Software ES51/P001</td>
-    <td>-------</td>
-    <td>Programação Web 2 ES71/K009</td>
-    <td>-------</td>
+    <td>Programação Móveis IF67H/I201</td>
+    <td>Programação Distribuída N16/K009</td>
+    <td>Programação Web 1 ES61/A040</td>
+    <td>Teoria Da Computação ES61/P101</td>
    </tr>
    </table>
 </body>
