updade tópicos em engenharia de software

--- a/aulas-2019-2.html
+++ b/aulas-2019-2.html
@@ -34,7 +34,13 @@
 		<td>Desenvolvimento De Jogos</td>
 		<td>C91</td>
 		<td>4</td>
-	   </tr>	
+	   </tr>
+	   <tr>
+		<td>IF69N</td>
+		<td>Tópicos Em Engenharia De Software</td>
+		<td>C91</td>
+		<td>4</td>
+	   </tr>
 	   <tr>
 		<td>IF66J</td>
 		<td>Teste De Software</td>
@@ -60,10 +66,10 @@
 		<td>4</td>
 	   </tr>
 	   <tr>
-		<td>Total de disciplinas: 6</td>
+		<td>Total de disciplinas: 7</td>
 	   </tr>
 	   <tr>
-		<td>Carga horária semanal utilizada: 25</td>
+		<td>Carga horária semanal utilizada: 29</td>
 	   </tr>
 	   <tr>
 		<td>Carga horária semanal máxima permitida: 40</td>
@@ -133,18 +139,18 @@
     <td>22:10</td>
     <td>TCC 1 IF67L/I202</td>
     <td>Teste De Software ES51/P001</td>
-    <td>-------</td>
+    <td>Tópicos Em Engenharia De Software C91/I202</td>
     <td>Programação Web 2 ES71/K009</td>
-    <td>-------</td>
+    <td>Tópicos Em Engenharia De Software C91/I202</td>
    </tr>
    <tr>
     <td>22:10</td>
     <td>23:00</td>
     <td>TCC 1 IF67L/I202</td>
     <td>Teste De Software ES51/P001</td>
-    <td>-------</td>
+    <td>Tópicos Em Engenharia De Software C91/I202</td>
     <td>Programação Web 2 ES71/K009</td>
-    <td>-------</td>
+    <td>Tópicos Em Engenharia De Software C91/I202</td>
    </tr>
    </table>
 </body>
