--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="aulas-2019-2.html">
                     <div class="card bg-success">
                         <div class="card-body text-center">
-                            <p class="card-text">Some text inside the fourth card</p>
+                            <p class="card-text">2019-2</p>
                         </div>
                     </div>
                 </a>
