--- a/aulas-2019-2.html
+++ b/aulas-2019-2.html
@@ -77,6 +77,84 @@
 	</table>
 </br>
 </br>
+</br></br>
+</br>
+<table>
+  <tr>
+  	<th>Inicio</th>
+	<th>Término</th>
+    <th>Segunda</th>
+    <th>Terça</th> 
+    <th>Quarta</th>
+    <th>Quinta</th>
+    <th>Sexta</th>
+  </tr>
+   <tr>
+    <td>18:40</td>
+    <td>19:00</td>
+    <td>Desenvolvimento De Jogos C91/K009</td>
+    <td>Programação Web 2 ES71/K009</td>
+    <td>Desenvolvimento De Jogos C91/P005</td>
+    <td>-------</td>
+    <td>Teste De Software ES51/P001</td>
+   </tr>
+   <tr>
+    <td>19:00</td>
+    <td>19:30</td>
+    <td>Desenvolvimento De Jogos C91/K009</td>
+    <td>Programação Web 2 ES71/K009</td>
+    <td>Desenvolvimento De Jogos C91/P005</td>
+    <td>-------</td>
+    <td>Teste De Software ES51/P001</td>
+   </tr>
+   <tr>
+    <td>19:30</td>
+    <td>20:20</td>
+    <td>Desenvolvimento De Jogos C91/K009</td>
+    <td>Programação Web 2 ES71/K009</td>
+    <td>Desenvolvimento De Jogos C91/P005</td>
+    <td>-------</td>
+    <td>Teste De Software ES51/P001</td>
+   </tr>
+   <tr>
+    <td>20:20</td>
+    <td>21:10</td>
+    <td>Desenvolvimento De Jogos C91/K009</td>
+    <td>Programação Web 2 ES71/K009</td>
+    <td>Desenvolvimento De Jogos C91/P005</td>
+    <td>-------</td>
+    <td>Teste De Software ES51/P001</td>
+   </tr>
+   <tr>
+    <td>21:10</td>
+    <td>21:20</td>
+    <td><b>Intervalo</b></td>
+    <td><b>Intervalo</b></td>
+    <td><b>Intervalo</b></td>
+    <td><b>Intervalo</b></td>
+    <td><b>Intervalo</b></td>
+   </tr>
+   <tr>
+    <td>21:20</td>
+    <td>22:10</td>
+    <td>TCC 1 IF67L/I202</td>
+    <td>Teste De Software ES51/P001</td>
+    <td>Tópicos Em Engenharia De Software C91/I202</td>
+    <td>Programação Web 2 ES71/K009</td>
+    <td>Tópicos Em Engenharia De Software C91/I202</td>
+   </tr>
+   <tr>
+    <td>22:10</td>
+    <td>23:00</td>
+    <td>TCC 1 IF67L/I202</td>
+    <td>Teste De Software ES51/P001</td>
+    <td>Tópicos Em Engenharia De Software C91/I202</td>
+    <td>Programação Web 2 ES71/K009</td>
+    <td>Tópicos Em Engenharia De Software C91/I202</td>
+   </tr>
+   </table>
+</br>
+</br>
 <h1>Aulas SEMI</h1>
 </br>
 <table>
