--- a/provas2019-2.html
+++ b/provas2019-2.html
@@ -14,13 +14,14 @@
     </head>
     <body>
         <!-- Funções -->
+	    
         <!--Teste de Software-->
          <script>
             function TesteSoftware(){
                 alert(
                     "Avaliação 1: 27/09\n\
 		     Avaliação 2: 29/11\n\
-		     Avaliaçõ sub: 06/12\n\"
+		     Avaliaçõ sub: 06/12"
                       );
                 }
         </script>
@@ -30,7 +31,7 @@
             function ProgramacaoWebII(){
                 alert(
                     "Projeto 1: 17/10\n\
-		     Projeto 2: 10/12\n\"
+		     Projeto 2: 10/12"
                       );
                 }
         </script>
@@ -51,7 +52,7 @@
                     "Projeto   1: 14/10\n\
 		     Avaliação 1: 16/10\n\
                      Avaliação 2: 11/12\n\
-                     Projeto   2: 16/12\n\"
+                     Projeto   2: 16/12"
                       );
                 }
         </script>
@@ -85,12 +86,13 @@
                     );
                 }
         </script>
-     <!--Função mouse over-->
+     
+	<!--Função mouse over-->
         <script>
         $(document).ready(function(){
         $('[data-toggle="popover"]').popover();
         });
-    </script>
+    	</script>
     	<!--Fim das funções-->
         <div class="container">
             <ul class="pager">
